# digital_lib

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  dependencies.txt  digital_lib.sln  digital_lib.vcxproj  digital_lib.vcxproj.filters
include/: db.h  db_filler.h  digital_lib.h  util.h
other/: dl.sql  dl.sqlite
src/: db.cpp  db_filler.cpp  digital_lib.cpp  main.cpp
